--- a/dev/services/alchemist/ga_ls_fc_3/ga_ls_fc_c2_3.alchemist.yaml
+++ b/dev/services/alchemist/ga_ls_fc_3/ga_ls_fc_c2_3.alchemist.yaml
@@ -58,6 +58,7 @@ output:
     dataset_version: 2.5.0
     collection_number: 3
     naming_conventions: dea_c3
+    usgs_collection: 2 
   properties:
     dea:dataset_maturity: interim
 
