--- a/dev/services/alchemist/ga_ls_wo_3/ga_ls_wo_c2_3.alchemist.yaml
+++ b/dev/services/alchemist/ga_ls_wo_3/ga_ls_wo_c2_3.alchemist.yaml
@@ -43,6 +43,7 @@ output:
     dataset_version: 1.6.0
     collection_number: 3
     naming_conventions: dea_c3
+    usgs_collection: 2
 
   properties:
     dea:dataset_maturity: interim
