--- a/products/land_and_vegetation/c3_fc/ga_ls_fc_c2_3.odc-product.yaml
+++ b/products/land_and_vegetation/c3_fc/ga_ls_fc_c2_3.odc-product.yaml
@@ -8,6 +8,7 @@ metadata:
   properties:
     odc:file_format: GeoTIFF
     odc:product_family: fc
+    usgs_collection: 2
   product:
     name: ga_ls_fc_c2_3
 
