update the product family name

--- a/dev/services/alchemist/ga_ls_fc_3_pi21_test/ga_ls_fc_3_pi21_test.alchemist.yaml
+++ b/dev/services/alchemist/ga_ls_fc_3_pi21_test/ga_ls_fc_3_pi21_test.alchemist.yaml
@@ -55,7 +55,7 @@ output:
   inherit_geometry: True
 
   metadata:
-    product_family: fc
+    product_family: fc_pi21_test
     producer: ga.gov.au
     dataset_version: 2.5.0
     collection_number: 3
