--- a/products/land_and_vegetation/c3_fc_pi21_test/ga_ls_fc_3_pi21_test.odc-product.yaml
+++ b/products/land_and_vegetation/c3_fc_pi21_test/ga_ls_fc_3_pi21_test.odc-product.yaml
@@ -1,4 +1,4 @@
-name: ga_ls_fc_3_pi21_test
+name: ga_ls_fc_pi21_test_3
 description: Geoscience Australia Landsat Fractional Cover Collection 3 - PI21 test
 metadata_type: eo3
 
@@ -7,9 +7,9 @@ license: CC-BY-4.0
 metadata:
   properties:
     odc:file_format: GeoTIFF
-    odc:product_family: fc
+    odc:product_family: fc_pi21_test
   product:
-    name: ga_ls_fc_3_pi21_test
+    name: ga_ls_fc_pi21_test_3
 
 measurements:
   - name: bs
