--- a/products/inland_water/wofs/ga_ls_wo_fq_apr_oct_3.yaml
+++ b/products/inland_water/wofs/ga_ls_wo_fq_apr_oct_3.yaml
@@ -1,6 +1,6 @@
 name: ga_ls_wo_fq_apr_oct_3
 description: Geoscience Australia Landsat Water Observations Frequency April to October Collection 3
-metadata_type: eo
+metadata_type: eo3
 
 metadata:
   properties:
