--- a/products/inland_water/wofs/ga_ls_wo_fq_nov_mar_3.yaml
+++ b/products/inland_water/wofs/ga_ls_wo_fq_nov_mar_3.yaml
@@ -1,6 +1,6 @@
 name: ga_ls_wo_fq_nov_mar_3
 description: Geoscience Australia Landsat Water Observations Frequency November to March Collection 3
-metadata_type: eo
+metadata_type: eo3
 
 metadata:
   properties:
